apps/postgrest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
        - name: postgrest
          image: postgrest/postgrest
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
            - name: http-admin
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - mountPath: "/mnt/secret"
              name: secret-volume
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
      volumes:
        - name: secret-volume
          secret:
            secretName: postgrest-secrets
            items:
              - key: jwk
                path: jwk.json
