apps/postgrest/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgrest
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aristo.krandor.org
      secretName: guardrail-tls
  rules:
    - host: aristo.krandor.org
      http:
        paths:
          - path: /db(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: postgrest
                port:
                  number: 80
